@@ -1,11 +1,33 @@
 <h1 tal:replace="structure context/manage_page_header">HEADER</h1>
-<h1 tal:replace="structure context/manage_tabs">TABS</h1>
 
-<h3> Add a MemCacheSessionDataContainer </h3>
+<main class="container-fluid">
 
-<form action="addMemCacheSessionDataContainer">
- <input type="text" name="id" />
- <input type="submit" value="Add" />
-</form>
+  <h2 class="zmi-form-title">Add a MemCacheSessionDataContainer </h2>
+
+  <form action="addMemCacheSessionDataContainer" method="post">
+      <div class="form-group row">
+          <label for="id" class="form-label col-sm-3 col-md-2">Id</label>
+          <div class="col-sm-9 col-md-10">
+              <input type="text" class="form-control" name="id" id="id"
+                     size="40" />
+          </div>
+      </div>
+
+      <div class="form-group row">
+          <label for="title" class="form-label col-sm-3 col-md-2">Title</label>
+          <div class="col-sm-9 col-md-10">
+              <input type="text" class="form-control" name="title" id="title"
+                     size="40" />
+          </div>
+      </div>
+
+      <div class="zmi-controls">
+          <input class="btn btn-primary" type="submit" name="submit"
+                 value="Add" />
+      </div>
+
+  </form>
+
+</main>
 
 <h1 tal:replace="structure context/manage_page_footer">FOOTER</h1>
